fixed width of collapsed navbar so not overlapping content

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ nav {
 	border-color: rgba(255, 255, 255, 0.9);
 }
 
+.navbar-nav {
+	width: 100px!important;
+}
+
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
